# pixelcore

./: .gitignore  .gitmodules  CMakeLists.txt  GPL_EXCEPTION  README.md
.github/workflows/: ci.yml
app/: main.cpp
core/: cms.cpp  cms.h  console.cpp  console.h  main.cpp  pixelcorecms.cpp  pixelcorecms.h  pixelcoreconsole.cpp  pixelcoreconsole.h  pixelcoreimage.cpp  pixelcoreimage.h  pixelcoreutils.cpp  pixelcoreutils.h  pixelcorewindow.cpp  pixelcorewindow.h
docs/: CNAME  index.md
libs/: pixelcorecms.cpp  pixelcorecms.h  pixelcoreimage.cpp  pixelcoreimage.h
src/: main.cpp  pixelcorecms.cpp  pixelcorecms.h  pixelcoreimage.cpp  pixelcoreutils.cpp  pixelcoreutils.h
